共现对完成