@@ -3,114 +3,89 @@ package cs209a.finalproject_demo.service;
 import cs209a.finalproject_demo.dataset.LocalDatasetRepository;
 import cs209a.finalproject_demo.dto.TopicCooccurrenceResponse;
 import cs209a.finalproject_demo.dto.TopicCooccurrenceResponse.TopicPair;
-import cs209a.finalproject_demo.dto.TopicCooccurrenceResponse.VennDiagramData;
-import cs209a.finalproject_demo.dto.TopicCooccurrenceResponse.VennSet;
-import cs209a.finalproject_demo.dto.TopicCooccurrenceResponse.VennIntersection;
 import cs209a.finalproject_demo.model.Question;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.Set;
-import java.util.TreeSet;
-import java.util.stream.Collectors;
+import java.util.*;
 
+/**
+ * 话题共现分析服务
+ * 分析标签对的共现频率，用于力导向图可视化
+ */
 @Service
 public class TopicCooccurrenceService {
 
     private final LocalDatasetRepository repository;
+    
+    // 预定义的核心 Java 话题集合（可选筛选）
+    private static final Set<String> CORE_JAVA_TOPICS = Set.of(
+            "spring-boot", "spring", "security", "concurrency", "multithreading",
+            "testing", "junit", "mockito", "lambda", "stream", "reflection",
+            "socket", "netty", "jdbc", "hibernate", "jpa", "maven", "gradle",
+            "collections", "generics", "io", "nio", "exception", "serialization"
+    );
 
     public TopicCooccurrenceService(LocalDatasetRepository repository) {
         this.repository = repository;
     }
 
-    public TopicCooccurrenceResponse topPairs(int topN) {
+    /**
+     * 获取 Top N 话题共现对
+     * 
+     * @param topN 返回的共现对数量
+     * @param filterCoreTopics 是否只筛选核心 Java 话题（可选，默认 false）
+     * @return 话题共现响应
+     */
+    public TopicCooccurrenceResponse topPairs(int topN, boolean filterCoreTopics) {
         List<Question> questions = repository.findAllQuestions();
+        // 使用 Map<Pair<String, String>, Long> 的等价实现
+        // 使用有序的字符串键来确保 (a,b) 和 (b,a) 被视为同一对
         Map<String, Long> pairCounters = new HashMap<>();
-        Map<String, Long> tagCounters = new HashMap<>();
 
-        // 统计共现对和单个标签出现次数
+        // 遍历每个问题，生成所有无序标签对
         for (Question question : questions) {
             List<String> tags = question.tags().stream()
                     .map(tag -> tag.toLowerCase(Locale.ROOT))
-                    .filter(tag -> !"java".equals(tag))
+                    .filter(tag -> !"java".equals(tag)) // 排除通用标签 "java"
+                    .filter(tag -> !filterCoreTopics || CORE_JAVA_TOPICS.contains(tag)) // 可选：只筛选核心话题
                     .distinct()
                     .toList();
 
-            // 统计单个标签
-            for (String tag : tags) {
-                tagCounters.merge(tag, 1L, Long::sum);
-            }
-
-            // 统计共现对
-            Set<String> seenPairs = new TreeSet<>();
+            // 为该问题生成所有无序标签对 (t_i, t_j)，其中 i != j
+            // 使用双重循环，j > i 确保每个对只生成一次
             for (int i = 0; i < tags.size(); i++) {
                 for (int j = i + 1; j < tags.size(); j++) {
-                    String a = tags.get(i);
-                    String b = tags.get(j);
-                    String key = a.compareTo(b) < 0 ? a + "|" + b : b + "|" + a;
-                    if (seenPairs.add(key)) {
-                        pairCounters.merge(key, 1L, Long::sum);
-                    }
+                    String tagA = tags.get(i);
+                    String tagB = tags.get(j);
+                    // 创建规范化的键（按字典序排序，确保无序）
+                    String pairKey = tagA.compareTo(tagB) < 0 
+                            ? tagA + "|" + tagB 
+                            : tagB + "|" + tagA;
+                    // 使用 merge 方法累加频率
+                    pairCounters.merge(pairKey, 1L, Long::sum);
                 }
             }
         }
 
-        // 获取 Top N 共现对
+        // 对所有标签对按频率降序排序，提取 Top N
         List<TopicPair> topPairs = pairCounters.entrySet().stream()
                 .sorted(Map.Entry.<String, Long>comparingByValue(Comparator.reverseOrder()))
                 .limit(topN)
                 .map(entry -> {
                     String[] parts = entry.getKey().split("\\|");
-                    return new TopicPair(List.of(parts[0], parts[1]), entry.getValue());
+                    // 确保顺序一致（按字典序）
+                    List<String> topicPair = Arrays.asList(parts[0], parts[1]);
+                    return new TopicPair(topicPair, entry.getValue());
                 })
                 .toList();
 
-        // 生成韦恩图数据（使用前 3 个最强共现对）
-        VennDiagramData vennData = generateVennDiagramData(topPairs, tagCounters, Math.min(3, topN));
-
-        return new TopicCooccurrenceResponse(topPairs, vennData);
+        return new TopicCooccurrenceResponse(topPairs);
     }
 
     /**
-     * 生成韦恩图数据
-     * 选择前 N 个最强共现对，构建韦恩图
+     * 获取 Top N 话题共现对（默认不过滤核心话题）
      */
-    private VennDiagramData generateVennDiagramData(List<TopicPair> topPairs, 
-                                                     Map<String, Long> tagCounters, 
-                                                     int vennTopN) {
-        if (topPairs.isEmpty() || vennTopN <= 0) {
-            return null;
-        }
-
-        // 选择前 N 个共现对
-        List<TopicPair> selectedPairs = topPairs.stream()
-                .limit(vennTopN)
-                .toList();
-
-        // 收集所有相关标签
-        Set<String> allTags = new TreeSet<>();
-        for (TopicPair pair : selectedPairs) {
-            allTags.addAll(pair.topics());
-        }
-
-        // 构建集合数据（单个标签的出现次数）
-        List<VennSet> sets = allTags.stream()
-                .map(tag -> new VennSet(tag, tagCounters.getOrDefault(tag, 0L)))
-                .sorted(Comparator.comparing(VennSet::size).reversed())
-                .toList();
-
-        // 构建交集数据（共现对的次数）
-        List<VennIntersection> intersections = selectedPairs.stream()
-                .map(pair -> new VennIntersection(pair.topics(), pair.count()))
-                .sorted(Comparator.comparing(VennIntersection::size).reversed())
-                .toList();
-
-        return new VennDiagramData(sets, intersections);
+    public TopicCooccurrenceResponse topPairs(int topN) {
+        return topPairs(topN, false);
     }
 }
